--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
       </span></p>
       <p class="resume-prompt">
         In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in&nbsp;the digital space - whether designing for apps, web or social media&nbsp;platforms.</p>
-        <p class="resume-prompt">I understanding the relationship between how design and content and correlates with experience (UX/UI). I have knowledge in using AI and prompt engineering tools to enhance designs, or enhance design thinking for designs.
+        <p class="resume-prompt">I understanding the relationship between how UX/UI relates to design and content. I have knowledge in using AI and prompt engineering tools to enhance designs.
         </p>
 
     </td>
@@ -76,7 +76,6 @@
     <td colspan="3">
       <p style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
       2020 - 2024 | BLG LLP (Borden Ladner Gervais LLP) </p>
-      <p class="resume-prompt"><span style="color: orangered;">Click on images for details.</span>
       </p>
     </td>
   </tr>
@@ -157,7 +156,10 @@
       </div>
     </td>
   </tr>
+
+
 </table>
+
 
 <!--BLG Section 2 columns-->
 
@@ -214,16 +216,17 @@
         </td>
 
   </tr>
+
 </table>
 
 
 <table class="threecoloumntables">
 <tr>
-  <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
-    <p class="resume-prompt">
-       I apply critical design thinking with research and ‘personas’ mindset to create harmonious and impactful digital products.</p>
-  </td>
+  <td colspan="3">
+  <td>
+
 </tr>
+
 </table>
 
 
@@ -435,7 +438,9 @@
 <table class="threecoloumntables">
 <tr>
   <td class="threebythreegrid" colspan="3">
-
+    <p class="resume-prompt">
+       I apply critical design thinking with research and ‘personas’ mindset to create harmonious and impactful digital experiences.
+         Prior to digital design, I have a consumer products and fashion background.</p>
   </td>
 </tr>
 </table>
@@ -485,9 +490,6 @@
 <table class="threecoloumntables">
 <tr>
   <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
-    <p class="resume-prompt">
-      Prior to digital design, I have a background in consumer product design and fashion design.</p>
-
   </td>
 </tr>
 </table>
@@ -569,7 +571,7 @@
 <tr>
   <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
     <p class="resume-prompt">
-      I was with Disney Canada for two and half years. We traveled to Disney Glendale regularly to work with the US team and the remaining time we met with licensees here in Canada and managed the online product approval process. One of my proudest moments was when my design got chosen to be sold at UNIQLO.</p>
+      I was with Disney Canada for two and half years. We worked regularly with the Disney Glendale team and the remaining time we met with licensees here in Canada managing the online product approval process. One of my special moments was having my design chosen to be sold as a T-shirt print at UNIQLO.</p>
   </td>
 </tr>
 </table>
@@ -655,7 +657,7 @@
 
       </span><br>
       <p class="resume-prompt">
-        I've also worked for Dolce & Gabbana while living in Milan upon bringing my design skills aboard.</p>
+        I've also worked for Dolce & Gabbana while living in Milan.</p>
       <p class="resume-prompt">
       This is continually updated with past and present portfolio experiences. Feel&nbsp;free to visit again or <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> to me should you have any inquiries <i class="fa fa-comment-o" aria-hidden="true" style="margin-top: 3%;"></i><br><br>
       ~ Thanks again for visiting <i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i></span><br><br></p>
