--- a/portfolio.html
+++ b/portfolio.html
@@ -48,11 +48,11 @@
 
     <td style="width: 700px; vertical-align: top;">
       <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9;">
-          Thanks for visiting my portfolio&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i>
+          Thanks for visiting my portfolio&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>
       </span></p>
-      <p class="resume-prompt">
+      <p class="resume-prompt" style="margin-bottom: 3%;">
         In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in&nbsp;the digital space - whether designing for apps, web or social media&nbsp;platforms.</p>
-        <p class="resume-prompt">I understanding the relationship between how UX/UI relates to design and content. I have knowledge in using AI and prompt engineering tools to enhance designs.
+        <p class="resume-prompt">I have a strong understanding in how design and content relates to UX/UI. I have knowledge in using AI and prompt engineering tools to enhance designs.
         </p>
 
     </td>
