--- a/portfolio.html
+++ b/portfolio.html
@@ -46,14 +46,13 @@
       </div>
     </td>
 
-    <td style="width: 700px; vertical-align: top;">
+    <td style="width: 700px; vertical-align: middle;">
       <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9;">
           Thanks for visiting my portfolio&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>
       </span></p>
-      <p class="resume-prompt" style="margin-bottom: 3%;">
+      <p class="resume-prompt ipad displaynone" style="margin-bottom: 3%;">
         In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in&nbsp;the digital space - whether designing for apps, web or social media&nbsp;platforms.</p>
-        <p class="resume-prompt">I have a strong understanding in how design and content relates to UX/UI. I have knowledge in using AI and prompt engineering tools to enhance designs.
-        </p>
+
 
     </td>
 
@@ -74,7 +73,7 @@
 
   <tr>
     <td colspan="3">
-      <p style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
+      <p style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 1px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
       2020 - 2024 | BLG LLP (Borden Ladner Gervais LLP) </p>
       </p>
     </td>
@@ -134,27 +133,7 @@
   </div>
 </td>
 
-<td class="threebythreegrid" style="border: 5px solid #ffffff;">
-  <div class="popup3" onclick="myFunction3()">
-    <span class="popuptext3" id="myPopup3">
-      <span class="portfolionexttwo popup2" onclick="myFunction2()">&#5176;</span>
-      <span class="portfolionexttwo popup4" onclick="myFunction4()">&#5171;</span>
-      <span class="close-btn-xy">&#10540;</span>
-      <div class="click-zoom">
-        <label>
-          <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images_pop blgbeyondone">
-          <img alt="Carousel Bootstrap Third" src="images/UXUI-Innovate-scroll.jpg" class="portfolio_images_pop innovatescroll">
 
-        </label>
-      </div>
-        <p class="titleforpopup">2020 - 2021 | BLG general brand awareness and Google Ads</p>
-        <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-        <p class="textforpopup">Design and curation of BLG's Google Ads campaign and landing page featuring top six BLG practice groups attracting over 3% click-through rate.<br><br></p>
-      </span>
-        <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="margin-left: auto; margin-right: auto; opacity: 1;">
-      </div>
-    </td>
   </tr>
 
 
@@ -165,6 +144,29 @@
 
 <table class="threecoloumntables">
   <tr>
+
+    <td class="threebythreegrid" style="border: 5px solid #ffffff;">
+      <div class="popup3" onclick="myFunction3()">
+        <span class="popuptext3" id="myPopup3">
+          <span class="portfolionexttwo popup2" onclick="myFunction2()">&#5176;</span>
+          <span class="portfolionexttwo popup4" onclick="myFunction4()">&#5171;</span>
+          <span class="close-btn-xy">&#10540;</span>
+          <div class="click-zoom">
+            <label>
+              <input type="checkbox">
+              <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images_pop blgbeyondone">
+              <img alt="Carousel Bootstrap Third" src="images/UXUI-Innovate-scroll.jpg" class="portfolio_images_pop innovatescroll">
+
+            </label>
+          </div>
+            <p class="titleforpopup">2020 - 2021 | BLG general brand awareness and Google Ads</p>
+            <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
+            <p class="textforpopup">Design and curation of BLG's Google Ads campaign and landing page featuring top six BLG practice groups attracting over 3% click-through rate.<br><br></p>
+          </span>
+            <img alt="Carousel Bootstrap Third" src="images/uxui.jpg" class="portfolio_images" text-align="center" style="margin-left: auto; margin-right: auto; opacity: 1;">
+          </div>
+        </td>
+
     <td class="threebythreegrid" style="border: 5px solid #ffffff;">
       <div class="popup4" onclick="myFunction4()">
         <span class="popuptext4" id="myPopup4">
@@ -186,9 +188,9 @@
               </p>
           </span>
           <img alt="Carousel Bootstrap Third" src="images/BLG-2024-Technology-Trends.gif" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1; background-size: cover;">
-
         </div>
-        </td>
+      </td>
+
 
         <td class="threebythreegrid" style="border: 5px solid #ffffff;">
           <div class="popup5" onclick="myFunction5()">
@@ -236,7 +238,7 @@
 <table class="threecoloumntables">
   <tr>
     <td colspan="3" class="threebythreegrid">
-      <p style="background: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato';margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">August 2017 - Jan 2020 | Blakes (Blake, Cassels & Graydon LLP) </p>
+      <p style="background: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato';margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">2017 - 2020 | Blakes LLP (Blake, Cassels & Graydon LLP) </p>
     </td>
   </tr>
   <tr>
@@ -256,12 +258,12 @@
       </div>
             <p class="titleforpopup">2019-2020 | Blakes.com</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-            <p class="textforpopup">Mockups, concepts and visual assets for the launch of blakes.com<br>
+            <p class="textforpopup">Creating concepts and visual assets for the launch of blakes.com<br>
               <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
               &nbsp;<a href="https://www.blakes.com" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Blakes.com</a></p>
           </span>
-        <img alt="Carousel Bootstrap Third" src="images/blakes-gradient.jpg" class="portfolio_images" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
-        <!--<img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images twoflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">-->
+        <img alt="Carousel Bootstrap Third" src="images/blakes-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
+        <img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images twoflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
       </div>
     </td>
 
@@ -438,9 +440,8 @@
 <table class="threecoloumntables">
 <tr>
   <td class="threebythreegrid" colspan="3">
-    <p class="resume-prompt">
-       I apply critical design thinking with research and ‘personas’ mindset to create harmonious and impactful digital experiences.
-         Prior to digital design, I have a consumer products and fashion background.</p>
+    <p class="resume-prompt" style="margin-top:3%;">
+    As a critical design thinker and researcher, I know how design and content can optimize UX/UI. I also have knowledge in using AI and prompt engineering tools to enhance designs and create impactful digital experiences. Prior to digital design, I have a background in consumer products and fashion.</p>
   </td>
 </tr>
 </table>
@@ -570,8 +571,8 @@
 <table class="threecoloumntables">
 <tr>
   <td class="threebythreegrid" colspan="3" style="border: 5px solid #ffffff;"><br>
-    <p class="resume-prompt">
-      I was with Disney Canada for two and half years. We worked regularly with the Disney Glendale team and the remaining time we met with licensees here in Canada managing the online product approval process. One of my special moments was having my design chosen to be sold as a T-shirt print at UNIQLO.</p>
+    <!--<p class="resume-prompt">
+      I was with Disney Canada for two and half years. We worked regularly with the Disney Glendale team and the remaining time we met with licensees here in Canada managing the online product approval process. One of my special moments was having my design chosen to be sold as a T-shirt print at UNIQLO.</p>-->
   </td>
 </tr>
 </table>
@@ -656,11 +657,13 @@
     <td style="width: 700px; vertical-align: top;" colspan="3">
 
       </span><br>
+    <!--  <p class="resume-prompt">
+        I've also worked for Dolce & Gabbana while living in Milan.</p>-->
       <p class="resume-prompt">
-        I've also worked for Dolce & Gabbana while living in Milan.</p>
-      <p class="resume-prompt">
-      This is continually updated with past and present portfolio experiences. Feel&nbsp;free to visit again or <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> to me should you have any inquiries <i class="fa fa-comment-o" aria-hidden="true" style="margin-top: 3%;"></i><br><br>
-      ~ Thanks again for visiting <i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%;"></i></span><br><br></p>
+      This is continually updated with past and present portfolio experiences. Feel&nbsp;free to visit again or <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> should you have any inquiries <i class="fa fa-comment-o" aria-hidden="true" style="margin-top: 3%;"></i><br><br>
+      <br><br></p>
+      </span>
+
     </td>
   </tr>
 </table>
