from ABout me to Onepager

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </label>
 
           <ul class="menu__box">
-            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">Onepager</a></li>
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Portfolio</a></li>
             <li><a class="menu__item" href="#contact">Contact me</a></li>
           </ul>
@@ -63,7 +63,7 @@
       <div class="container_two">
         <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;AU</a></h1>
         <div class="container_three">
-          <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
+          <h2 class="left button-row"><a href="#hello" target="" title="ONEPAGER"></a></h2>
 		  <h2 class="center button-row"><a href="portfolio.html" title="PORTFOLIO"></a></h2>
         <!--  <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2> -->
           <h2 class="right_right button-row"><a href="#contact" title="CONTACT"></a></h2>
