--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
           </label>
 
           <ul class="menu__box">
-            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">About me</a></li>
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">Onepager</a></li>
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#contact"> Contact me</a></li>
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html">Home</a></li>
           </ul>
