--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="menu__box">
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">Onepager</a></li>
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Portfolio</a></li>
-            <li><a class="menu__item" href="#contact">Contact me</a></li>
+            <li><a class="menu__item" href="#contact">Contact</a></li>
           </ul>
     </div>
 
