--- a/portfolio.html
+++ b/portfolio.html
@@ -40,13 +40,13 @@
 
           <ul class="menu__box">
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#resume_movement">Onepager</a></li>
-            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#contact"> Contact me</a></li>
+            <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html#contact">Contact</a></li>
             <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html">Home</a></li>
           </ul>
       </div>
     </td>
 
-    <td style="width: 700px; vertical-align: middle;">
+    <td style="width: 700px; vertical-align: top; padding-left: 5px; padding-top: 5px;">
       <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9;">
           Thanks for visiting my portfolio&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>
       </span></p>
@@ -73,7 +73,7 @@
 
   <tr>
     <td colspan="3">
-      <p style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 1px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
+      <p class="portfolio-tabs-blue" style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 1px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
       2020 - 2024 | BLG LLP (Borden Ladner Gervais LLP) </p>
       </p>
     </td>
@@ -251,19 +251,19 @@
         <div class="click-zoom">
           <label>
             <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/blakes.jpg" class="portfolio_images_pop">
+          <img alt="Carousel Bootstrap Third" src="images/blakes-perspective.jpg" class="portfolio_images_pop">
         <!--<img alt="Carousel Bootstrap Third" src="images/blakes-1.jpg" class="portfolio_images_pop blakessecond">-->
         <!--<img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images_pop blakesthird">-->
         </label>
       </div>
             <p class="titleforpopup">2019-2020 | Blakes.com</p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-            <p class="textforpopup">Creating concepts and visual assets for the launch of blakes.com<br>
+            <p class="textforpopup">Providing visual assets for the launch of blakes.com<br>
               <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
               &nbsp;<a href="https://www.blakes.com" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Blakes.com</a></p>
           </span>
-        <img alt="Carousel Bootstrap Third" src="images/blakes-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
-        <img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images twoflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
+        <img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
+        <img alt="Carousel Bootstrap Third" src="images/blakes-gradient.jpg" class="portfolio_images twoflowtwo" text-align="center" style="object-fit: cover; display: block; margin-left: auto; margin-right: auto; opacity: .8;">
       </div>
     </td>
 
@@ -655,14 +655,11 @@
 
   <tr>
     <td style="width: 700px; vertical-align: top;" colspan="3">
-
-      </span><br>
+      <br>
     <!--  <p class="resume-prompt">
         I've also worked for Dolce & Gabbana while living in Milan.</p>-->
       <p class="resume-prompt">
-      This is continually updated with past and present portfolio experiences. Feel&nbsp;free to visit again or <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> should you have any inquiries <i class="fa fa-comment-o" aria-hidden="true" style="margin-top: 3%;"></i><br><br>
-      <br><br></p>
-      </span>
+      This is continually updated with past and present portfolio experiences. Feel&nbsp;free to visit again or <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> if you have any inquiries <i class="fa fa-comment-o" aria-hidden="true" style="margin-top: 3%;"></i></p><br><br>
 
     </td>
   </tr>
@@ -861,7 +858,6 @@
           <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
        <!-- <h4 class="facebook" title="Click to view facebook (Currently Inactive)"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4> -->
-		  <br class="imac displaynone"><br class="imac displaynone">
         <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
 
 
