--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
     				<div id="labtopresumewidth" style="overflow: visible;">
 						<p class="resume-prompt" style="color: gray; font-family: 'Lato', serif; font-size: 17pt; font-weight: bold; line-height: 1.25; opacity: 1; margin: auto; top: -7vh; margin-top: 2%; margin-bottom:1%; text-align: center;">Who I am and what I do&nbsp;
               <i class="fa fa-barcode" aria-hidden="true" style="margin-top: 3%;"></i>
-            <br><span style="font-size:10pt">Click on resume to download PDF</span></p>
+            <br><span style="font-size:10pt">Click on onepager to download PDF</span></p>
 						<div class="forcvportwork" style="margin-left:auto; margin-right: auto; position: relative;"><a href="EDWIN AU.pdf" target="_blank">
               <img id="resume_movement" class="resume_pdf" src="EDWIN AU.jpg" alt="resume" title="Click to download PDF" ></a>
 						</div>
