fully graded with new bio and CV

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
     <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
-    <title>Edwin Au Portfolio Page</title>
+    <title>Edwin's portfolio</title>
   </head>
 <body style="overflow-x: hidden;">
 <!-- <div class="carolcarolcon Desktop"> -->
@@ -48,10 +48,11 @@
 
     <td style="width: 700px; vertical-align: top; padding-left: 5px; padding-top: 5px;">
       <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9;">
-          Thanks for visiting my portfolio&nbsp;&nbsp;<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>
+          Thanks for visiting <i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>
       </span></p>
-      <p class="resume-prompt ipad displaynone" style="margin-bottom: 3%;">
-        In recent years - over a pandemic and the drastic advancement of AI technology, so much has changed in&nbsp;the digital space - whether designing for apps, web or social media&nbsp;platforms.</p>
+      <p class="resume-prompt">
+      This is continually updated with past and present portfolio experiences. Feel&nbsp;free to reach out for my <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">full&nbsp;portfolio</a>, as some work are under NDA which prevents me from sharing boardly.</p>
+
 
 
     </td>
@@ -251,7 +252,7 @@
         <div class="click-zoom">
           <label>
             <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/blakes-perspective.jpg" class="portfolio_images_pop">
+          <img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images_pop">
         <!--<img alt="Carousel Bootstrap Third" src="images/blakes-1.jpg" class="portfolio_images_pop blakessecond">-->
         <!--<img alt="Carousel Bootstrap Third" src="images/blakes-perspective-gradient.jpg" class="portfolio_images_pop blakesthird">-->
         </label>
@@ -440,8 +441,10 @@
 <table class="threecoloumntables">
 <tr>
   <td class="threebythreegrid" colspan="3">
-    <p class="resume-prompt" style="margin-top:3%;">
-    As a critical design thinker and researcher, I know how design and content can optimize UX/UI. I also have knowledge in using AI and prompt engineering tools to enhance designs and create impactful digital experiences. Prior to digital design, I have a background in consumer products and fashion.</p>
+    <p class="resume-prompt" style="margin-top: 6%;">
+      So much has changed in today's climate - whether it's designing for web, apps or social media&nbsp;platforms. I think of design as a journey and work with content to optimize experience, whether it's in UX/UI or in digital visuals. As a designer, I also know when and how to work with prompt engineering and AI tools to enhance designs.</p>
+    <p class="resume-prompt" style="margin-top:3%; margin-bottom: 3%;">
+      In using critical design thinking and research, I'm able to create designs tailored for phones, tablets to large monitors.  I have experience with layouts, graphics, product mapping, wireframes, typography and colour. Prior to digital design, I have a background in consumer products and fashion.</p>
   </td>
 </tr>
 </table>
@@ -659,7 +662,7 @@
     <!--  <p class="resume-prompt">
         I've also worked for Dolce & Gabbana while living in Milan.</p>-->
       <p class="resume-prompt">
-      This is continually updated with past and present portfolio experiences. Feel&nbsp;free to visit again or <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> if you have any inquiries <i class="fa fa-comment-o" aria-hidden="true" style="margin-top: 3%;"></i></p><br><br>
+      Thanks again for visiting and please <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> if you have any inquiries <i class="fa fa-comment-o" aria-hidden="true" style="margin-top: 3%;"></i></p><br><br>
 
     </td>
   </tr>
