new wording with help from ChatGPT

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,15 +51,17 @@
           Thanks for visiting <i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>
       </span></p>
       <p class="resume-prompt">
-      Feel&nbsp;free to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach&nbsp;out</a> for my full portfolio, as some projects are under NDA's which prevent them from being shared boardly.</p>
+      Feel&nbsp;free to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach&nbsp;out</a> for my complete portfolio, as there are some projects that cannot be widely shared due to non-disclosure agreements.</p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
-      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;">
+<!--      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;"> -->
       <center>
-      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 100px; height: auto; margin-bottom: 15%;">
-      <p style="color: #333333; font-family: 'lato', serif; font-size: 13pt; font-weight: bold; padding-left:3%; line-height: 1.5">Edwin<br><span style="font-weight: normal; font-size: 10pt; color: #666666;" >Designer</span></p>
-    </center></a>
+      <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 70px; height: auto; margin-top: 5%; margin-bottom: 15%;">
+      <p style="color: #333333; font-family: 'lato', serif; font-size: 13pt; font-weight: bold; padding-left:3%; line-height: 1.5">Edwin Au<br><span style="font-weight: normal; font-size: 10pt; color: #666666;" >Digital Designer</span></p>
+    </center>
+
+<!--</a>-->
   </td>
 </tr>
 </table>
@@ -224,7 +226,7 @@
 <tr>
   <td colspan="3">
     <p class="resume-prompt" style="margin-top: 6%;">
-      So much has changed in today's climate - I think of design as journeys that work with content to optimize experiences in using critical design thinking and research, whether it's in UX/UI or in digital visuals.  As a designer, I also know when and how to work with prompt engineering and AI tools to enhance&nbsp;designs.</p><br>
+      I am a digital designer driven by creativity and engagement, specializing in&nbsp;web, app, and social media platforms. I view design as a journey that collaborates with content to enhance experiences through critical design thinking and research &mdash; whether in UX/UI or digital visuals. I possess the expertise to effectively utilize prompt engineering and AI tools to elevate&nbsp;designs.</p><br>
   <td>
 
 </tr>
@@ -442,7 +444,7 @@
   <td class="threebythreegrid" colspan="3">
 
     <p class="resume-prompt" style="margin-top:3%; margin-bottom: 3%;">
-      I'm able to create designs tailored for phones, tablets to large monitors.  I&nbsp;have experience with layouts, graphics, product mapping, wireframes, typography and colour. Prior to digital design, my background was in consumer products and fashion.</p>
+      I excel in customizing designs and content to fit various devices, spanning from smartphones and tablets to larger monitors. What distinguishes my work is the unique blend of passion and skill I bring across layouts, graphics, product mapping, wireframing, typography, and color palettes.</p>
   </td>
 </tr>
 </table>
@@ -659,8 +661,8 @@
       <br>
     <!--  <p class="resume-prompt">
         I've also worked for Dolce & Gabbana while living in Milan.</p>-->
-      <p class="resume-prompt">
-      I'd be glad to discuss any opportunities you have in mind, please <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> if you have any inquiries <i class="fa fa-comment-o" aria-hidden="true" style="margin-top: 3%;"></i> ~ Thanks again for visiting and have a good day.</p><br><br>
+      <p class="resume-prompt" style="margin-top: 3%; margin-bottom: 3%;">
+      I'm available to discuss any potential opportunities you have in mind.  Please&nbsp;don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> if you have any questions. <i class="fa fa-comment-o" aria-hidden="true" style=""></i><br> ~ Thanks again for visiting and have a good day.</p><br><br><br>
     </td>
   </tr>
 </table>
