more verbage tweeks on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -226,7 +226,7 @@
 <tr>
   <td colspan="3">
     <p class="resume-prompt" style="margin-top: 6%;">
-      I am a digital designer driven by creativity and engagement, specializing in&nbsp;web, app, and social media platforms. I view design as a journey that collaborates with content to enhance experiences through critical design thinking and research &mdash; whether in UX/UI or digital visuals. I possess the expertise to effectively utilize prompt engineering and AI tools to elevate&nbsp;designs.</p><br>
+      I am a digital designer driven by creativity and engagement, specializing in&nbsp;web, apps, and social media platforms. I view design as a journey that collaborates with content to enhance experiences through critical design thinking and research &mdash; whether in UX/UI or digital visuals. I possess the expertise to skillfully employ prompt engineering and AI tools to elevate&nbsp;designs.</p><br>
   <td>
 
 </tr>
