more wording tweaks

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,17 +48,18 @@
 
     <td style="width: 700px; vertical-align: top; padding-left: 5px; padding-top: 5px;">
       <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9;">
-          Thanks for visiting <i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>
+          Welcome and thanks&nbsp;for&nbsp;visiting. <!--<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>-->
       </span></p>
       <p class="resume-prompt">
-      Feel&nbsp;free to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach&nbsp;out</a> for my complete portfolio, as there are some projects that cannot be widely shared due to non-disclosure agreements.</p>
+        <i class="fa fa-comment-o" aria-hidden="true" style=""></i> <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">edwinfcau@gmail.com</a>.
+      </p>
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
 <!--      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;"> -->
       <center>
       <img alt="Carousel Bootstrap Second" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 70px; height: auto; margin-top: 5%; margin-bottom: 15%;">
-      <p style="color: #333333; font-family: 'lato', serif; font-size: 13pt; font-weight: bold; padding-left:3%; line-height: 1.5">Edwin Au<br><span style="font-weight: normal; font-size: 10pt; color: #666666;" >Digital Designer</span></p>
+      <p style="color: #333333; font-family: 'lato', serif; font-size: 13pt; font-weight: bold; padding-left:3%; line-height: 1.1">Edwin Au<br><span style="font-weight: normal; font-size: 9.5pt; color: #666666;" >Digital Designer</span></p>
     </center>
 
 <!--</a>-->
@@ -69,7 +70,7 @@
 
 <!--BLG Section 3 columns-->
 
-<table class="threecoloumntables" style="margin-top: 1%;">
+<table class="threecoloumntables" style="margin-top: 3%;">
 
   <tr>
     <td colspan="3">
@@ -98,7 +99,7 @@
                 <img alt="Edwin Au Portfolio Beyond UX UI Flat Ani" src="images/beyond-flat-ani-right.png" style="position: absolute; left:150px;" class="portfolio_images_pop blgbeyondright"> -->
             </label>
           </div>
-          <p class="titleforpopup">2020 | BLG BEYOND landing pages</p>
+          <p class="titleforpopup">2020 - 2024 | Digital Design - BLG BEYOND</p>
           <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
           <p class="textforpopup">Design and curation of digital visuals and digital products for BLG Beyond &mdash; an alternative suite of legal services by BLG; including and not limited to concepts, wireframes and digital assets.<br>
             <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blg.com/en/services/blg-beyond" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG BEYOND</a> and one of it's subsidiaries <a href="https://www.blg.com/en/services/blg-beyond/ip-strategy" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">Beyond IP Strategy</a>
@@ -125,7 +126,7 @@
       </div>
       <p class="titleforpopup">2022 | BLG Merchandise Store</p>
       <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-      <p class="textforpopup">Design and curation of digital visuals and digital assets for BLG Merchandise Store - a client gifting online portal<br>
+      <p class="textforpopup">Design and curation of digital visuals and digital assets for BLG Merchandise Store - a client gifting online portal.<br>
         <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>&nbsp;<a href="https://www.blacksheepshop.net/blg/" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Merchandise Store</a></p></span>
     <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
     <img alt="Carousel Bootstrap Third" src="images/blgwebstore-three.jpg" class="portfolio_images twoflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
@@ -179,10 +180,9 @@
           <img alt="Carousel Bootstrap Third" src="images/BLG-2024-Technology-Trends.gif" class="portfolio_images_pop">
         </label>
       </div>
-              <p class="titleforpopup">2020 - 2024 | BLG social media visuals </p>
+              <p class="titleforpopup">2020 - 2024 | Digital Design - Borden Ladner Gervais LLP</p>
               <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-              <p class="textforpopup">Motion graphics for BLG social media channels.<br>
-              <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
+              <p class="textforpopup">Animation for <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
               &nbsp;<a href="https://www.linkedin.com/posts/blglaw_mergersandacquistions-technology-activity-7155951469333041155-y7gS" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG LinkedIn Post - 2024 M&A Technology Trends</a>
 
               </p>
@@ -205,10 +205,9 @@
                   <img alt="Blakes Madness XII" src="images/BLG-ReNew.gif" class="portfolio_images_pop">
                 </label>
               </div>
-              <p class="titleforpopup">2020 - 2024 | BLG social media visuals</p>
+              <p class="titleforpopup">2020 - 2024 | Digital Design - Borden Ladner Gervais LLP</p>
               <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-              <p class="textforpopup">Motion graphics for BLG social media channels.<br>
-              <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
+              <p class="textforpopup">Animation for <i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
               &nbsp;<a href="https://www.linkedin.com/posts/blglaw_infrastructure-top100projects-blgproud-activity-7158918506447552512-A3fb" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG LinkedIn Post - ReNew Top 100 Ranking 2024</a>
               </p>
           </span>
@@ -444,7 +443,7 @@
   <td class="threebythreegrid" colspan="3">
 
     <p class="resume-prompt" style="margin-top:3%; margin-bottom: 3%;">
-      I excel in customizing designs and content to fit various devices, spanning from smartphones and tablets to larger monitors. What distinguishes my work is the unique blend of passion and skill I bring across layouts, graphics, product mapping, wireframing, typography, and color palettes.</p>
+      I can tailor designs and content to fit various devices, spanning from smartphones and tablets to larger monitors. What distinguishes my work is the unique blend of passion and skill I bring across layouts, graphics, product mapping, wireframing, typography, and colour palettes.</p>
   </td>
 </tr>
 </table>
@@ -662,7 +661,8 @@
     <!--  <p class="resume-prompt">
         I've also worked for Dolce & Gabbana while living in Milan.</p>-->
       <p class="resume-prompt" style="margin-top: 3%; margin-bottom: 3%;">
-      I'm available to discuss any potential opportunities you have in mind.  Please&nbsp;don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach out</a> if you have any questions. <i class="fa fa-comment-o" aria-hidden="true" style=""></i><br> ~ Thanks again for visiting and have a good day.</p><br><br><br>
+      Feel&nbsp;free to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach&nbsp;out</a> for my complete portfolio, as there are some projects that cannot be widely shared due to non-disclosure agreements.<br><br> ~ Thanks again for visiting. Have a good day.
+      </p><br><br><br>
     </td>
   </tr>
 </table>
