--- a/portfolio.html
+++ b/portfolio.html
@@ -503,7 +503,7 @@
 <table class="threecoloumntables">
   <tr>
     <td colspan="2">
-      <p style="background: linear-gradient(45deg, #516395, #516395, #516395, #a7a6ba, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">2013 - 2016 | The Walt Disney Company Canada </p>
+      <p style="background: linear-gradient(45deg, #516395, #516395, #516395, #a7a6ba, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">2013 - 2016 | Associate, Online Product Approval - Disney Canada</p>
     </td>
   </tr>
   <tr>
