corrected Dreamweaver Spelling on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -378,7 +378,7 @@
         </div>
               <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">A Conversation with Margaret Atwood</span></p>
               <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-              <p class="textforpopup">Event eVite design &mdash; front page email design and registration form creation. <u><b>Software used</b></u>: Photoshop, dreamweave and InterAction.</p>
+              <p class="textforpopup">Event eVite design &mdash; front page email design and registration form creation. <u><b>Software used</b></u>: Photoshop, Dreamweaver and InterAction.</p>
             </span>
           <img alt="Edwin's portfolio Margaret Atwood" src="images/HTML_Porfolio-2023-1b.jpg" class="portfolio_images" text-align="center" style=" overflow: hidden; display: block; margin-left: auto; margin-right: auto; position: relative; transform: scale(2.5); opacity: 1; padding-left:15%;">
         </div>
@@ -471,7 +471,7 @@
           </div>
             <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">Blakes Madness XII</span></p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-            <p class="textforpopup">Event eVite design &mdash; front page email design and registration form creation. <u><b>Software used</b></u>: Photoshop, dreamweave and InterAction.</p>
+            <p class="textforpopup">Event eVite design &mdash; front page email design and registration form creation. <u><b>Software used</b></u>: Photoshop, Dreamweaver and InterAction.</p>
           </span>
         <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-3b-gradient.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 0.6;">
         <video autoplay loop muted playsinline src="images/blakes-madness.mp4" width="96VW" height="auto" frameborder="0" class="portfolio_images twoflowtwo"></video>
@@ -494,7 +494,7 @@
       </div>
             <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">A Night with Shania Twain</span></p>
             <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-            <p class="textforpopup">Event eVite design &mdash; front page email design and registration form creation. <u><b>Software used</b></u>: Photoshop, dreamweaver and InterAction.</p>
+            <p class="textforpopup">Event eVite design &mdash; front page email design and registration form creation. <u><b>Software used</b></u>: Photoshop, Dreamweaver and InterAction.</p>
           </span>
         <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b-gradient.jpg" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
       </div>
