--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
     <title>Edwin's portfolio</title>
   </head>
-<body style="overflow-x: hidden;">
+<body style="overflow-x: hidden; ">
 <!-- <div class="carolcarolcon Desktop"> -->
 
 
@@ -48,7 +48,7 @@
 
     <td style="width: 500px; vertical-align: top; padding-left: 0px; padding-top: 5px;">
       <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9;">
-          Welcome and thank you for visiting. <!--<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>-->
+          Welcome and thanks for visiting. <!--<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>-->
       </span></p>
       <p class="resume-prompt">This portfolio is regularly updated with both past accomplishments and recent projects. If interested in exploring further, feel free to reach out. I'd love to share my full portfolio with you.<br>
         <i class="fa fa-comment-o" aria-hidden="true" style=""></i> <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">edwinfcau@gmail.com</a>.
