--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
       <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9;">
           Welcome and thanks for visiting. <!--<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>-->
       </span></p>
-      <p class="resume-prompt">This portfolio is regularly updated with both past accomplishments and recent projects. If interested in exploring further, feel free to reach out. I'd love to share my full portfolio with you.<br>
+      <p class="resume-prompt" style="font-size: 9.5pt; color: #888B90;">This portfolio is in progress of being updated with both past accomplishments and recent projects. If interested in exploring further, feel free to reach out. I'd love to share my full portfolio with you.
         <i class="fa fa-comment-o" aria-hidden="true" style=""></i> <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">edwinfcau@gmail.com</a>.
       </p>
     </td>
