--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
       <p class="resume-prompt"><span style="color: #333333; font-size: 13pt; line-height: .9;">
           Welcome and thanks for visiting. <!--<i class="fa fa-leaf" aria-hidden="true" style="margin-top: 3%; margin-bottom: 3%;"></i>-->
       </span></p>
-      <p class="resume-prompt" style="font-size: 9.5pt; color: #888B90;">This portfolio is in progress of being updated with both past accomplishments and recent projects. If interested in exploring further, feel free to reach out. I'd love to share my full portfolio with you.
+      <p class="resume-prompt tileresumepromptdelay" style="font-size: 9.5pt; color: #888B90;">My portfolio is in progress of being updated with both past accomplishments and recent projects. If interested in exploring further, feel free to reach out. I'd love to share my full portfolio with you.
         <i class="fa fa-comment-o" aria-hidden="true" style=""></i> <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">edwinfcau@gmail.com</a>.
       </p>
     </td>
@@ -74,7 +74,7 @@
 
   <tr>
     <td colspan="3">
-      <p class="portfolio-tabs-blue" style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 1px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
+      <p class="portfolio-tabs-blue tileanimate" style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 1px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
       2020 - 2024 | Digital Designer - Borden Ladner Gervais LLP</p>
       </p>
     </td>
@@ -82,7 +82,7 @@
 
 
   <tr>
-    <td class="threebythreegrid" style="border: 5px solid #ffffff;">
+    <td class="threebythreegrid tileanimate" style="border: 5px solid #ffffff;">
       <div class="popup1" onclick="myFunction1()" style="position:relative;">
         <span class="popuptext1" id="myPopup1">
           <span class="portfolionexttwo popup15" onclick="myFunction15()">&#5176;</span>
@@ -111,7 +111,7 @@
       </div>
   </td>
 
-<td class="threebythreegrid">
+<td class="threebythreegrid tileanimate">
   <div class="popup2" onclick="myFunction2()" style="position:relative;">
     <span class="popuptext2" id="myPopup2">
       <span class="portfolionexttwo popup1" onclick="myFunction1()">&#5176;</span>
@@ -146,7 +146,7 @@
 <table class="threecoloumntables">
   <tr>
 
-    <td class="threebythreegrid" style="border: 5px solid #ffffff;">
+    <td class="threebythreegrid tileanimate" style="border: 5px solid #ffffff;">
       <div class="popup3" onclick="myFunction3()">
         <span class="popuptext3" id="myPopup3">
           <span class="portfolionexttwo popup2" onclick="myFunction2()">&#5176;</span>
@@ -168,7 +168,7 @@
           </div>
         </td>
 
-    <td class="threebythreegrid" style="border: 5px solid #ffffff;">
+    <td class="threebythreegrid tileanimate" style="border: 5px solid #ffffff;">
       <div class="popup4" onclick="myFunction4()">
         <span class="popuptext4" id="myPopup4">
           <span class="portfolionexttwo popup3" onclick="myFunction3()">&#5176;</span>
@@ -191,7 +191,7 @@
       </td>
 
 
-        <td class="threebythreegrid" style="border: 5px solid #ffffff;">
+        <td class="threebythreegrid tileanimate" style="border: 5px solid #ffffff;">
           <div class="popup5" onclick="myFunction5()">
             <span class="popuptext5" id="myPopup5">
               <span class="portfolionexttwo popup4" onclick="myFunction4()">&#5176;</span>
@@ -223,7 +223,7 @@
 <table class="threecoloumntables">
 <tr>
   <td colspan="3">
-    <p class="resume-prompt" style="margin-top: 6%; margin-bottom: 3%;">
+    <p class="resume-prompt tileanimate" style="margin-top: 6%; margin-bottom: 3%;">
       As a digital designer specializing in web, apps, and social media platforms, my aim is to craft designs that captivate audiences endlessly. I believe design transcends mere appearances; it's about how it functions. Employing critical design thinking and thorough research, I create holistic designs that enhance the user experience. I also leverage prompt engineering and AI tools when necessary to elevate designs to new heights.</p><br>
   <td>
 
@@ -236,7 +236,7 @@
 
   <tr>
 
-    <td class="threebythreegrid" style="border: 5px solid #ffffff;">
+    <td class="threebythreegrid " style="border: 5px solid #ffffff;">
 <!--      <div class="popup8" onclick="myFunction8()"> -->
 <!--        <span class="popuptext8" id="myPopup8">
           <span class="portfolionexttwo popup7" onclick="myFunction7()">&#5176;</span>
